syntax = "proto3";

option csharp_namespace = "dotnetgRPC.Protos";

package Sensor;

// The greeting service definition.
service SensorService {
  // Sends a greeting
  rpc Sensor (SensorDataRequest) returns (SensorDataReply);
}

// The request message containing the user's name.
message SensorDataRequest {
  string mac = 1;
}

// The response message containing the greetings.
message SensorDataReply {
  string rawData = 1;
}
